alignement fix

--- a/src/renderer/components/Guidelines/styles.module.css
+++ b/src/renderer/components/Guidelines/styles.module.css
@@ -1,7 +1,7 @@
 .container {
-    display: grid;
-  margin-left: 150px;
-    grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  margin-left: 120px;
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 105px 0;
-    grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
