--- a/src/renderer/screens/Home/styles.module.css
+++ b/src/renderer/screens/Home/styles.module.css
@@ -32,7 +32,7 @@
 }
 
 .whySection {
-  margin-left: 100px;
+  margin-left: 60px;
   margin-top: 100px;
   margin-bottom: 50px;
 }
@@ -43,6 +43,7 @@
   gap: 110px;
   width: 100%;
   font-family: 'Displace-Medium';
+  margin: auto;
 }
 
 .reason {
